possible solution to tables

--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,29 @@
 
   <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
 
+  <acme-table>
+    <acme-table-row>
+      <acme-table-data>a</acme-table-data>
+      <acme-table-data>a</acme-table-data>
+      <acme-table-data>a</acme-table-data>
+    </acme-table-row>
+    <acme-table-row>
+      <acme-table-data>aaa</acme-table-data>
+      <acme-table-data>aaa</acme-table-data>
+      <acme-table-data>aaa</acme-table-data>
+    </acme-table-row>
+    <acme-table-row>
+      <acme-table-data>aaaaaa</acme-table-data>
+      <acme-table-data>aaaaaa</acme-table-data>
+      <acme-table-data>aaaaaa</acme-table-data>
+    </acme-table-row>
+    <acme-table-row>
+      <acme-table-data>aaaaaaaaaaaa</acme-table-data>
+      <acme-table-data>aaaaaaaaaaaa</acme-table-data>
+      <acme-table-data>aaaaaaaaaaaa</acme-table-data>
+    </acme-table-row>
+  </acme-table>
+
+
 </body>
 </html>
