add acme-card and acme-name

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,22 @@
 </head>
 <body>
 
-  <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
+  <acme-name first="Marvin" last="Acme"></acme-name>
+  <acme-card
+    href="https://en.wikipedia.org/wiki/Acme_Corporation"
+    heading="Acme Corporation">
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+    </p>
+    <ul>
+      <li>
+        Road Runner
+      </li>
+      <li>
+        Wile E. Coyote
+      </li>
+    </ul>
+  </acme-card>
 
   <acme-table>
     <acme-table-row>
