--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,8 @@
   <acme-name first="Marvin" last="Acme"></acme-name>
   <acme-card
     href="https://en.wikipedia.org/wiki/Acme_Corporation"
-    heading="Acme Corporation">
+    heading="Acme Corporation"
+    img="https://via.placeholder.com/150">
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
     </p>
